<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_list_group"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/select_group" />
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notify" />
    </group>

    <item android:title="Связь">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/message" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_announcement_black_24dp"
                android:title="@string/info" />
        </menu>
    </item>

</menu>